# ytdlnis

./: .gitignore
app/: build.gradle
app/src/main/java/com/deniscerri/ytdl/data/remote/: ApiClient.kt  ApiConfig.kt  YtdlApi.kt
app/src/main/java/com/deniscerri/ytdl/data/remote/models/: JobRequest.kt  JobResponse.kt  JobResult.kt  JobStatus.kt
docs/: ARCHITECTURE_AFTER.md  ARCHITECTURE_BEFORE.md
server/: .env.example  README.md  pyproject.toml
server/app/: __init__.py  config.py  dependencies.py  job_state.py  main.py  schemas.py  storage.py  tasks.py
